--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.2.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
+    "ethereum-transfer-gateway": "^0.1.0-beta.2",
     "ethers": "^5.0.17",
     "fs-extra": "^9.0.1",
     "hardhat": "^2.0.0",
