--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "prettier-plugin-solidity": "^1.0.0-alpha.57",
     "solhint": "^3.3.1",
     "solhint-plugin-prettier": "^0.0.5",
-    "solidity-coverage": "^0.7.10",
+    "solidity-coverage": "^0.7.12",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
@@ -54,7 +54,7 @@
     "format:fix": "prettier --write \"**/*.{ts,js,sol}\"",
     "test": "cross-env HARDHAT_DEPLOY_FIXTURE=true HARDHAT_COMPILE=true mocha --bail --recursive test",
     "gas": "cross-env REPORT_GAS=true hardhat test",
-    "coverage": "cross-env HARDHAT_DEPLOY_FIXTURE=true hardhat --network coverage coverage",
+    "coverage": "hardhat coverage",
     "dev": "hardhat node --reset --watch --export contractsInfo.json",
     "compile": "hardhat compile",
     "local:dev": "hardhat --network localhost deploy --watch",
